--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,18 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
+/build/
+/target/
+/bin/
 *.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
+.vscode
+.idea
+.classpath
+.vscode
+.settings
+.idea
+.project
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
