CH-18 added hibernate-validator | Comment entity done

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
       <artifactId>hibernate-entitymanager</artifactId>
       <version>5.4.33.Final</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.2.5.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
