--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,17 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+
+
+
+  <servlet>
+    <servlet-name>AuthorServlet</servlet-name>
+    <servlet-class>controller.AuthorServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AuthorServlet</servlet-name>
+    <url-pattern>/author</url-pattern>
+  </servlet-mapping>
+
+
 </web-app>
