CH-39 Search Article By Title Done

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
     <url-pattern>/author</url-pattern>
   </servlet-mapping>
 
-  <!-- Squad MemberServlet -->
+  
   <servlet>
     <servlet-name>ArticlePageServlet</servlet-name>
     <servlet-class>controller.ArticlePageServlet</servlet-class>
@@ -32,8 +32,7 @@
     <servlet-name>ArticlePageServlet</servlet-name>
     <url-pattern>/article</url-pattern>
   </servlet-mapping>
-
-  <!-- Squad MemberServlet -->
+ 
   <servlet>
     <servlet-name>PendingCommentServlet</servlet-name>
     <servlet-class>controller.PendingCommentServlet</servlet-class>
@@ -41,6 +40,15 @@
   <servlet-mapping>
     <servlet-name>PendingCommentServlet</servlet-name>
     <url-pattern>/article/pending</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>ArticleServlet</servlet-name>
+    <servlet-class>controller.ArticleServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ArticleServlet</servlet-name>
+    <url-pattern>/articles</url-pattern>
   </servlet-mapping>
 
 </web-app>
