CH-42 style: Hope page done | header, footer, other pages styles

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>AuthorServlet</servlet-name>
-    <url-pattern>/author</url-pattern>
+    <url-pattern>/authors</url-pattern>
   </servlet-mapping>
 
   <!-- article page with comments -->
