--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
   </dependencies>
 
   <build>
+    <finalName>3CHAN</finalName>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
